[gd_scene load_steps=4 format=3 uid="uid://d356ji37gv1ou"]

[ext_resource type="Script" uid="uid://2p5q6yadxv4l" path="res://characters/player/boombox/boombox_projectile.gd" id="1_en8ok"]

[sub_resource type="CircleShape2D" id="CircleShape2D_en8ok"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_uh24j"]
radius = 64.0

[node name="BoomboxProjectile" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource("1_en8ok")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_en8ok")

[node name="autodet_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="boom" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="boom"]
shape = SubResource("CircleShape2D_uh24j")
disabled = true

[connection signal="timeout" from="autodet_timer" to="." method="_on_autodet_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="boom" to="." method="_on_boom_body_entered"]
